stage0/tests/compile_fail/borrows/borrow_return.dg
type Point { x: i32 }
func leak() -> ref Point {
    let p = Point { x: 1 }
    ref p
}
func main() -> i32 { 0 }
